# chronos-cli

./: .gitignore  Makefile.am  README.md  README.txt  bootstrap  cli-help.c  cli-info.c  cli-lux1310.c  cli-table.c  cli-utils.h  cli.h  config.h  configure.ac  debchanges.sh  fpga-loader.c  fpga-lux1310.h  fpga-mmap.c  fpga-sci.c  fpga.h  hello.c  i2c-eeprom.c  i2c.h  libtool  xcompile.sh
debian/: changelog  chronos-cli.install  chronos-pcUtil.init  chronos-pwrutil.init  chronos-pwrutil.install  chronos-pwrutil.service  chronos-tools.install  chronos-upower.init  chronos-upower.install  chronos-video.install  chronos-video.service  control  copyright  python3-pychronos.install  rescue-pwrutil.service  rules
doc/: Makefile
doc/source/: conf.py  control.rst  index.rst  video.rst
docs/: dbus video api overlay documentation.frag.html
scripts/: 90-media-automount.rules  aimCamera.py  automount.sh  cam-dual-display.sh  cam-lcd.sh  cam-live.sh  cam-omx.sh  camera.py  camtest.py  chronos-pmic-loader.sh  controlApi.py  controlDbus.py  dbusWebBridge.py  io.py  ioInterface.py  lux1310.py  media-automount@.service  ringControlApi.py  runApi.sh  sensor.py  sensorApi.py  sequencer.py  spd.py  ssh-vpss-logger.sh  syncToCamera.py  testFpga.py  timingGen.py
scripts/regmaps/: __init__.py  ioInterface.py  sensor.py  sensorTiming.py  sequencer.py  vram.py  zebraStripes.py
scripts/sensors/: __init__.py  api.py  lux1310.py  lux1310regs.py
scripts/uiScripts/: tap-to-exit-button.py
src/: Makefile.am  cam-cli.c  cam-daemon.c  cam-json.c  cam-listener  cam-loader.c  cam-pcUtil  cam-pipeline.c  cam-recover  cam-recover.c  cam-regdump.c  cam-scgi  cam-testdbus.c  cli-utils.h  config.h  fpga-gpmc.h  fpga-loader.c  fpga-lux1310.c  fpga-lux1310.h  fpga-mmap.c  fpga-sci.c  fpga.h  fw-logger  i2c-eeprom.c  i2c-spd.c  i2c-spd.h  lux1310-wavetab.c  pychronos.c  setup.py
src/api/: ca.krontech.chronos.control.xml  ca.krontech.chronos.video.xml  cam-dbus-client.h  cam-dbus-server.h  cam-dbus-video.h  cam-rpc.h  com.krontech.chronos.control.conf  com.krontech.chronos.control.xml  com.krontech.chronos.video.xml
src/audio/: alsaDaemon.c
src/cli/: cli-fpgaload.c  cli-help.c  cli-info.c  cli-init.c  cli-led.c  cli-lux1310.c  cli-table.c  cli.h
src/client/: README.md  cam-json.c  cam-listener.c  cam-recordfile.sh  dbus-json.c  dbus-json.h
src/daemon/: README.md  calibration.c  cam-daemon.c  camera.c  camera.h  daemon.h  dbus-glue.c  main.c  memory.c
src/fwlogger/: LoggerSM.c  LoggerSM.h  UIAPacket.h  loggerSMDump.c
src/lib/: board-chronos14.c  cam-dbus.c  dbus-json.c  dbus-json.h  edid.c  edid.h  fpga-loader.c  fpga-mmap.c  fpga-sensor.h  fpga.h  glibc-hacks.c  i2c-eeprom.c  i2c-spd.c  i2c-spd.h  i2c.h  ioport.c  ioport.h  lux1310-sensor.c  lux1310-wavetab.c  lux1310.h  lux2100.h  memcpy-neon.c  segment.c  segment.h  sensor.c  tiff.c  tiff.h  utils.h
src/mock/: dbus-mock.c  gen-frames.sh  main.c  mock-control.c  mock-sensor.c  mock-video.c  mock.h
src/pcUtil/: IntelHex.h  MBCRC16.c  MBCRC16.h  chronos-pmic-v10.hex  chronos-pmic-v11.hex  chronos-pmic-v8.hex  chronos-pmic-v9.hex  comms.c  comms.cpp  comms.h  intelHex.c  intelHex.cpp  pcutil.c  pcutil.cpp  pcutil.h  socket.c  socket.cpp  socket.h  types.h
src/pipeline/: README.md  audiomux.c  blackref.c  cam-pipeline.c  dbus-params-functions.c  dbus-params.c  dbus-video.c  dng.c  gstneon.c  h264.c  hdmi.c  lcd.c  overlay.c  pipeline.h  playback.c  raw.c  rtsp-methods.c  rtsp-private.h  rtsp-server.c  screencap.c
src/pipeline/gst/: gifdec.h  gstgifsrc.c  gstgifsrc.h  gstneon.h  gstneoncrop.c  gstneonflip.c
src/pychronos/: lux1310.c  module.c  pwm.c  pychronos.h  registers.c  sequencer.c  setup.py
src/regdump/: cam-regdump.c  regs-fpga.c  regs-lux1310.c  regs-lux2100.c  regs-luxima.c  regs.h
src/scgi/: introspect.c  main.c  methods.c  scgi.c  scgi.h
src/upower/: cam-upower.c  mbcrc16.c  mbcrc16.h  pwrcmd.c  pwrcmd.h
